--- a/service.html
+++ b/service.html
@@ -145,59 +145,31 @@
     </header>
     <!-- header block end -->
 
-    <!-- main block start -->
-    <main>
-        <section class="main container">
-            <!-- services block start -->
-            <section class="services ms_style">
-                <h2 class="title">Ծառայություններ</h2>
+        <!-- main block start -->
 
-                <div class="services_items">
-                    <div class="service_item">
-                        <img src="./img/service.jpg" alt="service_cover">
-
-                        <div class="service_items_text">
-                            <h3>Հարմարավետ Սենյակներ</h3>
-                            <p>Մեր հյուրանոցում դուք կարող եք գտնել հարմարավետ սենյակներ, որտեղ կան․․․</p>
-                            <a href="service.html">Տեսնել ավելին</a>
+        <main>
+            <section class="main_two container">
+                <section class="services_two ms_style">
+                    <h2 class="title">Title</h2>
+                    <div class="services_block">
+                        <div class="cover">
+                            <img src="./img/mainbg.jpg" alt="">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga eligendi dolorem nostrum nam, ipsum eveniet esse optio expedita hic illo repellat excepturi dignissimos. Officiis dolorem, perspiciatis modi molestiae ipsa nisi tempore aut ut sunt dolores commodi officia provident sint, rerum temporibus cupiditate aspernatur eos! A dolores vitae molestiae porro consectetur accusamus commodi perspiciatis voluptatem deleniti temporibus labore voluptatum sed excepturi laboriosam tenetur vero, officiis dignissimos accusantium. Ipsam in quidem eveniet dolorem velit neque corporis, minus necessitatibus. Quo aliquam, ad esse pariatur officiis inventore tempora quam tenetur? Sequi ipsam nulla pariatur ipsum libero praesentium molestiae, omnis asperiores, optio sint dicta aliquam cumque, architecto maiores impedit earum suscipit magni at facere explicabo eius! Architecto debitis hic, dicta pariatur molestias, corrupti a dolorum nobis cumque amet nam sed odit tenetur deserunt consequuntur, porro reprehenderit dolores facere ea atque distinctio adipisci doloremque! Quos, voluptas? Exercitationem optio aliquid reiciendis odit delectus sunt eum accusamus ipsum blanditiis ea, officia dignissimos natus illo quis earum doloribus asperiores magni distinctio sed. Neque laborum aliquam repellat minima non, nostrum consequuntur? Tempore incidunt ratione eius harum mollitia modi at magni sed, dolor aperiam, officiis nisi! Illum iste pariatur doloremque sapiente a rem saepe, asperiores harum. Autem modi corrupti voluptas nisi veniam. Minima et dolorum voluptatem molestias praesentium enim laborum sit. Voluptate aspernatur vel rerum, alias a mollitia, perferendis nostrum, placeat ad sed inventore nulla molestias earum distinctio quos cum voluptates officiis tenetur repellendus rem optio maxime. Non ea, nostrum distinctio dolores ex recusandae, veniam consequuntur quaerat error at doloremque architecto sit odit voluptatibus! Animi recusandae, quod ratione commodi deleniti accusamus nulla vero rem itaque laborum molestias placeat, praesentium eligendi! Fugiat iste error laudantium aspernatur et totam accusamus provident eligendi rem labore, qui, ipsum sed quisquam tenetur inventore? Ex illo ad iure officia blanditiis, exercitationem quis ab officiis laborum sint reprehenderit saepe sed facilis libero non. Eos delectus esse in soluta. Cum fugit quia tempore totam. Mollitia magni sit velit voluptates veritatis rerum laborum. Inventore nesciunt, debitis incidunt ea ullam facere ad quisquam, fugiat exercitationem nobis quibusdam iusto non pariatur temporibus odio laudantium eius numquam deleniti dicta accusamus adipisci odit? Nesciunt veritatis tempora voluptatibus aliquam. Libero pariatur, cum eum cupiditate quod consequuntur minima magni. Dolor doloremque debitis corrupti animi neque, sunt quas, voluptatem vero dignissimos consectetur asperiores vitae vel reprehenderit ullam accusantium nemo recusandae repudiandae accusamus qui nisi eaque. Cum beatae expedita explicabo quasi error fugit recusandae vel vero optio nam.</p>
                         </div>
                     </div>
-                    <div class="service_item">
-                        <img src="./img/service.jpg" alt="service_cover">
-
-                        <div class="service_items_text">
-                            <h3>Հարմարավետ Սենյակներ</h3>
-                            <p>Մեր հյուրանոցում դուք կարող եք գտնել հարմարավետ սենյակներ, որտեղ կան․․․</p>
-                            <a href="service.html">Տեսնել ավելին</a>
-                        </div>
+                    <div class="service_img">
+                        <img src="./img/tur1.jpg" alt="">
+                        <img src="./img/tur2.jpg" alt="">
+                        <img src="./img/tur3.jpg" alt="">
+                        <img src="./img/tur4.jpg" alt="">
                     </div>
-                    <div class="service_item">
-                        <img src="./img/service.jpg" alt="service_cover">
-
-                        <div class="service_items_text">
-                            <h3>Հարմարավետ Սենյակներ</h3>
-                            <p>Մեր հյուրանոցում դուք կարող եք գտնել հարմարավետ սենյակներ, որտեղ կան․․․</p>
-                            <a href="service.html">Տեսնել ավելին</a>
-                        </div>
-                    </div>
-                    <div class="service_item">
-                        <img src="./img/service.jpg" alt="service_cover">
-
-                        <div class="service_items_text">
-                            <h3>Հարմարավետ Սենյակներ</h3>
-                            <p>Մեր հյուրանոցում դուք կարող եք գտնել հարմարավետ սենյակներ, որտեղ կան․․․</p>
-                            <a href="service.html">Տեսնել ավելին</a>
-                        </div>
-                    </div>
-                </div>
+                </section>
             </section>
-            <!-- services block end -->
-        </section>
-    </main>
-    <!-- main block end -->
+        </main>
 
+         <!-- main block end -->
 
-    <script src="./js/script.js"></script>
-  
 </body>
 </html>
+
+
